// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render backgroundColor: #016e1e - value[0] 1`] = `
<div
  id="backgroundColor: #016e1e"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="backgroundColor: #016e1e_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"backgroundColor: #016e1e_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render default - value[0] 1`] = `
<div
  id="default"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="default_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"default_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render menus: default - value[0] 1`] = `
<div
  id="menus: default"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="menus: default_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"menus: default_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render menus: links[0] - value[0] 1`] = `
<div
  id="menus: links[0]"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="menus: links[0]_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"menus: links[0]_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render menus: properties.menuId: menu_one - value[0] 1`] = `
<div
  id="menus: properties.menuId: menu_one"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="menus: properties.menuId: menu_one_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"menus: properties.menuId: menu_one_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render menusTitle pageId - value[0] 1`] = `
<div
  id="menusTitle pageId"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="menusTitle pageId_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"menusTitle pageId_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render menusTitle properties.title - value[0] 1`] = `
<div
  id="menusTitle properties.title"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="menusTitle properties.title_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"menusTitle properties.title_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render menusTitle url - value[0] 1`] = `
<div
  id="menusTitle url"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="menusTitle url_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"menusTitle url_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render properties.MenuGroup with MenuLInks - value[0] 1`] = `
<div
  id="properties.MenuGroup with MenuLInks"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="properties.MenuGroup with MenuLInks_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"properties.MenuGroup with MenuLInks_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render properties.danger: true - value[0] 1`] = `
<div
  id="properties.danger: true"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="properties.danger: true_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"properties.danger: true_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render properties.icon - value[0] 1`] = `
<div
  id="properties.icon"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="properties.icon_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"properties.icon_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render properties.links - value[0] 1`] = `
<div
  id="properties.links"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="properties.links_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"properties.links_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render properties.subMenuCloseDelay: 3 - value[0] 1`] = `
<div
  id="properties.subMenuCloseDelay: 3"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="properties.subMenuCloseDelay: 3_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"properties.subMenuCloseDelay: 3_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render properties.subMenuOpenDelay: 3 - value[0] 1`] = `
<div
  id="properties.subMenuOpenDelay: 3"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="properties.subMenuOpenDelay: 3_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"properties.subMenuOpenDelay: 3_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render properties.title - value[0] 1`] = `
<div
  id="properties.title"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="properties.title_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"properties.title_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render required = true backgroundColor: #016e1e - value[0] 1`] = `
<div
  id="backgroundColor: #016e1e"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="backgroundColor: #016e1e_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"backgroundColor: #016e1e_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render required = true default - value[0] 1`] = `
<div
  id="default"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="default_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"default_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render required = true menus: default - value[0] 1`] = `
<div
  id="menus: default"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="menus: default_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"menus: default_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render required = true menus: links[0] - value[0] 1`] = `
<div
  id="menus: links[0]"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="menus: links[0]_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"menus: links[0]_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render required = true menus: properties.menuId: menu_one - value[0] 1`] = `
<div
  id="menus: properties.menuId: menu_one"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="menus: properties.menuId: menu_one_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"menus: properties.menuId: menu_one_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render required = true menusTitle pageId - value[0] 1`] = `
<div
  id="menusTitle pageId"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="menusTitle pageId_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"menusTitle pageId_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render required = true menusTitle properties.title - value[0] 1`] = `
<div
  id="menusTitle properties.title"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="menusTitle properties.title_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"menusTitle properties.title_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render required = true menusTitle url - value[0] 1`] = `
<div
  id="menusTitle url"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="menusTitle url_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"menusTitle url_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render required = true properties.MenuGroup with MenuLInks - value[0] 1`] = `
<div
  id="properties.MenuGroup with MenuLInks"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="properties.MenuGroup with MenuLInks_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"properties.MenuGroup with MenuLInks_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render required = true properties.danger: true - value[0] 1`] = `
<div
  id="properties.danger: true"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="properties.danger: true_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"properties.danger: true_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render required = true properties.icon - value[0] 1`] = `
<div
  id="properties.icon"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="properties.icon_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"properties.icon_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render required = true properties.links - value[0] 1`] = `
<div
  id="properties.links"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="properties.links_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"properties.links_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render required = true properties.subMenuCloseDelay: 3 - value[0] 1`] = `
<div
  id="properties.subMenuCloseDelay: 3"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="properties.subMenuCloseDelay: 3_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"properties.subMenuCloseDelay: 3_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render required = true properties.subMenuOpenDelay: 3 - value[0] 1`] = `
<div
  id="properties.subMenuOpenDelay: 3"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="properties.subMenuOpenDelay: 3_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"properties.subMenuOpenDelay: 3_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render required = true properties.title - value[0] 1`] = `
<div
  id="properties.title"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="properties.title_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"properties.title_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render required = true selectedColor: #f16e1e - value[0] 1`] = `
<div
  id="selectedColor: #f16e1e"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="selectedColor: #f16e1e_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"selectedColor: #f16e1e_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render required = true selectedColor: #f16e1e, backgroundColor: #016e1e - value[0] 1`] = `
<div
  id="selectedColor: #f16e1e, backgroundColor: #016e1e"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="selectedColor: #f16e1e, backgroundColor: #016e1e_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"selectedColor: #f16e1e, backgroundColor: #016e1e_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render required = true theme: light - value[0] 1`] = `
<div
  id="theme: light"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="theme: light_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"theme: light_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render required = true theme: light, selectedColor: #6C2ACB - value[0] 1`] = `
<div
  id="theme: light, selectedColor: #6C2ACB"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="theme: light, selectedColor: #6C2ACB_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"theme: light, selectedColor: #6C2ACB_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render required = true theme: light, selectedColor: #f16e1e, backgroundColor: #016e1e - value[0] 1`] = `
<div
  id="theme: light, selectedColor: #f16e1e, backgroundColor: #016e1e"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="theme: light, selectedColor: #f16e1e, backgroundColor: #016e1e_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"theme: light, selectedColor: #f16e1e, backgroundColor: #016e1e_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render selectedColor: #f16e1e - value[0] 1`] = `
<div
  id="selectedColor: #f16e1e"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="selectedColor: #f16e1e_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"selectedColor: #f16e1e_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render selectedColor: #f16e1e, backgroundColor: #016e1e - value[0] 1`] = `
<div
  id="selectedColor: #f16e1e, backgroundColor: #016e1e"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="selectedColor: #f16e1e, backgroundColor: #016e1e_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"selectedColor: #f16e1e, backgroundColor: #016e1e_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render theme: light - value[0] 1`] = `
<div
  id="theme: light"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="theme: light_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"theme: light_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render theme: light, selectedColor: #6C2ACB - value[0] 1`] = `
<div
  id="theme: light, selectedColor: #6C2ACB"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="theme: light, selectedColor: #6C2ACB_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"theme: light, selectedColor: #6C2ACB_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Render theme: light, selectedColor: #f16e1e, backgroundColor: #016e1e - value[0] 1`] = `
<div
  id="theme: light, selectedColor: #f16e1e, backgroundColor: #016e1e"
>
  <button
    class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
    id="theme: light, selectedColor: #f16e1e, backgroundColor: #016e1e_button"
    type="button"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"theme: light, selectedColor: #f16e1e, backgroundColor: #016e1e_button_icon","title":"AiOutlineMenuFold","className":"css-0","required":false}
      </svg>
    </span>
  </button>
</div>
`;

exports[`Test Schema backgroundColor: #016e1e 1`] = `true`;

exports[`Test Schema backgroundColor: #016e1e 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema menus: default 1`] = `true`;

exports[`Test Schema menus: default 2`] = `null`;

exports[`Test Schema menus: links[0] 1`] = `true`;

exports[`Test Schema menus: links[0] 2`] = `null`;

exports[`Test Schema menus: properties.menuId: menu_one 1`] = `true`;

exports[`Test Schema menus: properties.menuId: menu_one 2`] = `null`;

exports[`Test Schema menusTitle pageId 1`] = `true`;

exports[`Test Schema menusTitle pageId 2`] = `null`;

exports[`Test Schema menusTitle properties.title 1`] = `true`;

exports[`Test Schema menusTitle properties.title 2`] = `null`;

exports[`Test Schema menusTitle url 1`] = `true`;

exports[`Test Schema menusTitle url 2`] = `null`;

exports[`Test Schema properties.MenuGroup with MenuLInks 1`] = `true`;

exports[`Test Schema properties.MenuGroup with MenuLInks 2`] = `null`;

exports[`Test Schema properties.danger: true 1`] = `true`;

exports[`Test Schema properties.danger: true 2`] = `null`;

exports[`Test Schema properties.icon 1`] = `true`;

exports[`Test Schema properties.icon 2`] = `null`;

exports[`Test Schema properties.links 1`] = `true`;

exports[`Test Schema properties.links 2`] = `null`;

exports[`Test Schema properties.subMenuCloseDelay: 3 1`] = `true`;

exports[`Test Schema properties.subMenuCloseDelay: 3 2`] = `null`;

exports[`Test Schema properties.subMenuOpenDelay: 3 1`] = `true`;

exports[`Test Schema properties.subMenuOpenDelay: 3 2`] = `null`;

exports[`Test Schema properties.title 1`] = `true`;

exports[`Test Schema properties.title 2`] = `null`;

exports[`Test Schema selectedColor: #f16e1e 1`] = `true`;

exports[`Test Schema selectedColor: #f16e1e 2`] = `null`;

exports[`Test Schema selectedColor: #f16e1e, backgroundColor: #016e1e 1`] = `true`;

exports[`Test Schema selectedColor: #f16e1e, backgroundColor: #016e1e 2`] = `null`;

exports[`Test Schema theme: light 1`] = `true`;

exports[`Test Schema theme: light 2`] = `null`;

exports[`Test Schema theme: light, selectedColor: #6C2ACB 1`] = `true`;

exports[`Test Schema theme: light, selectedColor: #6C2ACB 2`] = `null`;

exports[`Test Schema theme: light, selectedColor: #f16e1e, backgroundColor: #016e1e 1`] = `true`;

exports[`Test Schema theme: light, selectedColor: #f16e1e, backgroundColor: #016e1e 2`] = `null`;
